src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
/* ... */
@sprite .docTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutCenter {
   gwt-image: 'activeDocTabTile';
}

@sprite .docTabPanel .tabLayoutRight {
   gwt-image: 'docTabRight';
}
@sprite .docTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutRight {
   gwt-image: 'activeDocTabRight';
}
*/
.dirtyTab {
   color: #a00;
}

.dirtyTabIndicator {
   display: none;
}
.dirtyTab .dirtyTabIndicator {
   display: inline;
}

/** Module tabs **/
.gwt-TabLayoutPanelTab {
   cursor: default;
}

.moduleTabPanel .gwt-TabLayoutPanelTabs {
   font-size: 11px;
   height: 24px;
   background: MULTIPODTOP top repeat-x;
   background-color: white;
   cursor: default;
}
.moduleTabPanel .gwt-TabLayoutPanelTab {
   font-size: 11px;
}
.moduleTabPanel.minimized .gwt-TabLayoutPanelTab {
   margin-top: -1px;
}

.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutLeft {
   width: 3px;
   height: 23px;
   background: MULTIPODTABLEFT right top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutCenter {
   height: 23px;
   padding-left: 6px;
   padding-right: 6px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutRight {
   width: 3px;
   height: 23px;
   background: MULTIPODTABRIGHT left top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .gwt-Label {
   font-weight: bold;
   padding-top: 4px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutLeft {
   height: 24px;
   width: 6px;
   background: MULTIPODACTIVETABLEFT right top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutCenter {
   height: 24px;
   background: MULTIPODACTIVETABTILE top repeat-x;
   padding-left: 3px;
   padding-right: 3px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutRight {
   height: 24px;
   width: 6px;
   background: MULTIPODACTIVETABRIGHT left top no-repeat;
}
.moduleTabPanel .toolbar {
   background-image: TOOLBARBACKGROUND2;
}
.multiPodUtilityArea {
   background: MULTIPODTOPFADE left top repeat-y;
}
.firstTabSelected {
}

/** Toolbar **/

.toolbar .gwt-CheckBox {
   position: relative;
   top: 1px;
   margin: 0 9px 0 0;
   padding: 0;
   white-space: nowrap;
}

.toolbar {
   font-size: 11px;
   width: 100%;
   height: 23px;
   background: TOOLBARBACKGROUND repeat-x top;
   padding: 0 0 0 6px;
}

.toolbar * {
   margin-top: 0px;
}

.toolbar input[type=checkbox] {
   margin: 0 3px 0 0;
   max-height: 14px;
}

.toolbarButton {
   border: none;
   background-color: transparent;
   margin: 0 8px 0 0;
   padding: 0;
   vertical-align: top;
   height: 21px;
   overflow: hidden;
   cursor: pointer;
}
.toolbarButton.noLabel {
   margin-right: 4px;
}
@if user.agent safari gecko1_8 {
   .toolbarButtonPushed {
      position: relative;
      top: 1px;
   }
}
.toolbarButtonPushed {
}
.toolbarButton[disabled] {
   /* joecheng: This renders poorly in ie8 */
   /*filter: literal("alpha(opacity = 50)") !important;*/
   opacity: 0.3;
   color: #333;
   cursor: default;
}

.toolbarButton[disabled]:active {
   top: 0px;
}
.toolbarSeparator {
   margin-right: 5px;
}
.secondaryToolbar {
   background: TABBACKGROUND bottom repeat-x;
   height: TABSTRIPHEIGHT;
}
.toolbarButtonRightImage {
   display: none;
}
.toolbarButtonMenu .toolbarButtonRightImage {
   display: inline;
   margin: 4px 0 0 2px;
}
.toolbarButtonLeftImage {
   margin-top: 2px;
}
.toolbarButtonLabel {
   margin: 4px 0 0 2px;
   font-family: proportionalFont;
   font-size: 11px !important;
   white-space: nowrap;
}

.windowFrameToolbarButton {
   margin-top: -2px;
   margin-left: 4px;
}

.statusBarMenu {
   font-size: 11px;
}
.statusBarMenu .gwt-MenuItem {
   padding-right: 30px;
}

.miniToolbar {
   margin-top: 4px;
}
.miniToolbar img {
   margin-right: 6px;
}


/** Help Search box **/
.search {
   position: relative;
   top: -1px;
   margin-right: 8px;
   width: 120px;
   height: 18px;
}
.search .left {
   position: absolute;
   top: 0;
   left: 0;
   width: 6px;
   height: 18px;
   background: SEARCHFIELDLEFT top no-repeat;
}
.search .center {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 6px;
   right: 6px;
   background: SEARCHFIELDTILE top repeat-x;
}
.search .right {
   position: absolute;
   top: 0;
   right: 0;
   width: 6px;
   height: 18px;
   background: SEARCHFIELDRIGHT top no-repeat;
}
.searchMagGlass {
   position: absolute;
   top: 3px;
   left: 0;
   width: 14px;
   height: 13px;
}
.clearSearch {
   position: absolute;
   top: 4px;
   right: 0;
   width: 11px;
   height: 11px;
}
.searchBoxContainer {
   position: absolute;
   top: 0;
   bottom: 1px;
   left: 18px;
   right: 18px;
}
.searchBoxContainer2 {
   position: absolute;
   top: 0;
   bottom: 1px;
   left: 0;
   right: 2px;
}
.searchBox {
   width: 100%;
   height: 100%;
   border: 0;
   margin: 0;
   outline: none;
   font-size: 10px;
   background-color: transparent;
}
body.windows .searchBox {
   font-size: 11px;
}

/** Workbench **/

.dialogMessage {
   padding-left: 8px;
   padding-top: 12px;
   width: 300px;
   padding-bottom: 12px;
}

.sessionAbendMessage {
   padding-left: 8px;
   width: 300px;
}

.applicationHeaderStrong {
   font-weight: bold;
}

.linkDownArrow {
   cursor: pointer;
}


/** Help Search box **/
.workspace {
   border-collapse: collapse;
}
.workspace td {
   font-family: fixedWidthFont;
   border: 1px solid #eeeff2;
}

.workspace tr.workspaceDataRow {
   cursor: pointer;
}

.workspace tr.workspaceDataRow td {
   line-height: 1.4;
}

@sprite .workspace tr.workspaceDataFrameRow td+td {
   gwt-image: 'zoomDataset';
   background-position: right center; 
}

.workspaceSectionHead {
   font-size: 11px;
   height: 18px;
   background: WORKSPACESECTIONHEADERTILE top repeat-x;
}
.workspaceSectionHead td {
   font-family: proportionalFont;
   font-weight: bold;
}
.scalarEdit {
	cursor: text;
}
.editing {
   background-color: white;
}
.editPending {
   color: gray;
}

.odd {
   background-color: #f2f2f2;
}

.EditDialog {
   border: 1px solid #BBB;  
   background-color: white;
}
/* ... */

